force-app/main/default/objects/AzureADmdt__mdt/AzureADmdt__mdt.object-meta.xml
<CustomObject>
    <label>AzureADMetadata</label>
    <pluralLabel>AzureADMetadatas</pluralLabel>
</CustomObject>