force-app/main/default/objects/AzureADmdt__mdt/fields/Azure_Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Azure_Grant_Type__c</fullName>
    <label>Azure Grant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>