force-app/main/default/objects/AzureADmdt__mdt/fields/Azure_Scope__c.field-meta.xml
<CustomField>
    <fullName>Azure_Scope__c</fullName>
    <label>Azure Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>