force-app/main/default/objects/AzureADmdt__mdt/fields/Sharepoint_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Site_Id__c</fullName>
    <label>Sharepoint Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>